# wilde

./: .gitignore  .hlint.yaml  .rsync-filter  CHANGELOG.md  INSTALL  Makefile.am  README.md  configure.ac  wilde.cabal
demo/: README  README.md  sql-join-demo-complex.hs  sql-join-demo-simple.hs  video-web-server.yaml  wilde-demo.cabal
demo/sql/: sql-join-demo-complex.hs  sql-join-demo-simple.hs
demo/video-app/db/: create-database.mysql  create-user-and-set-userprivileges.sql  odbc-data-source-name--mariadb.ini  odbc-data-source-name.ini
demo/video-app/src/: video-cgi.hs  video-tool.hs  video-web-server.hs
demo/video-app/src/Common/ObjectType/: AttributeType.hs  IdName.hs  ObjectType.hs
demo/video-app/src/Video/: ObjectModel.hs
demo/video-app/src/Video/Conf/: AppConf.hs  DatabaseConnect.hs  WaiSystemConfiguration.hs
demo/video-app/src/Video/ObjectModel/: Country.hs  Director.hs  Episode.hs  Genre.hs  Recording.hs  Season.hs  SpecificSubject.hs  Title.hs  Unit.hs
demo/video-app/src/Video/ObjectType/: AttributeType.hs
demo/video-app/src/Video/Ui/: LinkRenderer.hs  Style.hs  UiResources.hs  UiResourcesRaw.hs
demo/video-app/web/: video-custom.css  video-web-server.html
doc/: apache.md  context-dependent-attribute-info.txt  dependencies.txt  install-app.md  service-config.txt  services.txt
examples/: video-cgi.hs
examples/Common/App/: DatabaseConnect.hs  WaiSystemConfiguration.hs
examples/Common/ObjectType/: AttributeType.hs  DateTitleDescription.hs  IdName.hs  ManyToMany.hs  ObjectType.hs
examples/Video/: ObjectModel.hs
examples/Video/ObjectModel/: Country.hs  Director.hs  Episode.hs  Recording.hs  Season.hs  SpecificSubject.hs  Title.hs  Unit.hs
examples/Video/ObjectType/: AttributeType.hs
setup/apache2/: emil-wilde.conf  install-app.md  setup.md
src/Wilde/Application/: ApplicationConfiguration.hs  ApplicationInput.hs  ApplicationServices.hs  ObjectModelServiceLink.hs  ObjectTypeService.hs  PopUp.hs  Service.hs  ServiceLink.hs  SingleDbConnectionHandler.hs  StandardServiceLinks.hs  StandardServices.hs
src/Wilde/ApplicationConstruction/: ElementSetUtils.hs  GenericStringRepIo.hs  StandardServices.hs
src/Wilde/Database/: Sql.hs  (+7 more)
testsuite/: runtests.sh
testsuite/testapp/: .gitignore  Setup.hs  hie.yaml  server-config.yaml  wilde-hs-testapp.cabal
testsuite/testapp/html/: .gitignore  Makefile  index.html  style-extra.css  style.css  testapp-server.html  testapp-wai-warp.html  wilde_test.css  wilde_test.html
testsuite/testapp/setup/apache/: wilde-hs-cgi.conf.in
testsuite/testapp/setup/db/: create-database.sql  create-user-and-set-userprivileges.sql  db-contents.sql
testsuite/testapp/setup/odbc/: wilde_test-odbc-datasource.init
testsuite/testapp/sql/: create-tables.sql  wilde-py-testapp-create-tables.sql
testsuite/testapp/src/: ApplicationConfiguration.hs  AttributeType.hs  DatabaseConnection.hs  ObjectModel.hs  Services.hs  TestApplication.hs  TestApplicationServices.hs  style.css  testapp-cgi.hs  testapp-tool.hs  testapp-wai-warp.hs  testing.hs
testsuite/testapp/src/Db/: Connection.hs  MariaDb.hs  Odbc.hs
testsuite/testapp/src/ObjectType/: CharacterEncodingExperiment.hs
testsuite/testapp/web/: application.css  testapp-hs.css
testsuite/tests/: .gitignore  Makefile.am  TestSuit.hs  test-suit.hs
testsuite/tests/TestResources/: AssertUtils.hs  Environment.hs  PresentationMonadUtils.hs  ReferenceObjectType.hs  TestData.hs  TestUtils.hs  UserInteractionOutputMonadUtils.hs
testsuite/tests/TestResources/Testing/: AssertUtils.hs  Checker.hs  TestUtils.hs  TestWithTmpDir.hs  TmpDir.hs
testsuite/tests/TestResources/UserInteraction/: FormBlockResources.hs  WidgetResources.hs
testsuite/tests/Wilde/: DdlUtils.hs
testsuite/tests/Wilde/ApplicationConstruction/: AttributeTypesListFooterTest.hs  DateParserTest.hs  ObjectTypeTest.hs  SqlExprParserTest.hs  Test.hs
testsuite/tests/Wilde/ApplicationConstruction/StandardServices/: WildeSqlInputerTest.hs
testsuite/tests/Wilde/ApplicationTool/: ApplicationToolTest.hs
testsuite/tests/Wilde/Media/: ElementSetTest.hs  ElementTest.hs  Test.hs
testsuite/tests/Wilde/ObjectModel/: ObjectModelTest.hs  Test.hs
testsuite/tests/Wilde/ObjectModel/UserInteraction/: SingleAttributeObjectModelTestResources.hs  Test.hs  UserInteractionTest.hs
testsuite/tests/Wilde/ObjectModel/UserInteraction/Input/: CommonTest.hs  Test.hs
testsuite/tests/Wilde/ObjectModel/UserInteraction/Output/: CommonTest.hs  Test.hs
testsuite/tests/Wilde/Render/Cgi/: ElementSetIoTest.hs
testsuite/tests/Wilde/Utils/: ListUtilsTest.hs
testsuite/tests/WildeTest/: DdlUtils.hs
testsuite/tests/WildeTest/ApplicationConstruction/: AttributeTypeTest.hs  AttributeTypesListFooterTest.hs  DateParserTest.hs  SqlExprParserTest.hs  Test.hs
testsuite/tests/WildeTest/ApplicationConstruction/StandardServices/: WildeSqlInputerTest.hs
testsuite/tests/WildeTest/ApplicationTool/: ApplicationToolTest.hs
testsuite/tests/WildeTest/Driver/: Tests.hs
testsuite/tests/WildeTest/Driver/WaiServer/: ReadConfigFile.hs  RequestHandlerResolving.hs  Tests.hs
testsuite/tests/WildeTest/Driver/WaiServer/Cli/: Options.hs  ParseArguments.hs  ReadArgsAndFiles.hs  TestResources.hs  Tests.hs
testsuite/tests/WildeTest/Driver/WaiServer/Cli/TestResources/: CliOptions.hs  Yaml.hs
testsuite/tests/WildeTest/Driver/WaiServer/FilePathHandling/: PathIsValid.hs  ResolveMimeType.hs  TestResources.hs  Tests.hs
testsuite/tests/WildeTest/Media/: ElementSetTest.hs  ElementTest.hs  Test.hs
testsuite/tests/WildeTest/ObjectModel/: ObjectModelTest.hs  Test.hs
testsuite/tests/WildeTest/ObjectModel/UserInteraction/: SingleAttributeObjectModelTestResources.hs  Test.hs  UserInteractionTest.hs
testsuite/tests/WildeTest/ObjectModel/UserInteraction/Input/: CommonTest.hs  Test.hs
testsuite/tests/WildeTest/ObjectModel/UserInteraction/Output/: CommonTest.hs  Test.hs
testsuite/tests/WildeTest/Render/Cgi/: ElementSetIoTest.hs
testsuite/tests/WildeTest/Utils/: ListUtilsTest.hs
tools/: IdentifierLexer.hs  apply-move-modules  move-modules.hs  wd
web/: wilde.css
(+246 files in other folders)
