Name:      wilde
Version:   0.6.0
License:             GPL
License-file:        LICENSE
Build-Type:          Simple
Cabal-Version:       >=1.10
Author:              Emil Karlén (emil@member.fsf.org)
Maintainer:          emil@member.fsf.org
Stability:           experimental
Bug-Reports:         mailto:emil@member.fsf.org
Synopsis:            Library for implementing simple database-oriented CGI Web applications
Description:         Library for implementing simple administrative CGI Web applications
Category:            Web

Library
  Default-Language:  Haskell2010
  ghc-options:       -fwarn-unused-imports
-- -Wall
  Hs-Source-Dirs:    src
  Build-Depends:
    base          ==4.15.1.0,
    containers    ==0.6.4.1,
    transformers  ==0.5.6.2,
    mtl           ==2.2.2,
    array         ==0.5.4.0,
    pretty        ==1.1.3.6,
    convertible   ==1.1.1.1,
    parsec        ==3.1.14.0,
    old-locale    ==1.0.0.7,
    time          ==1.9.3,
    html          ==1.0.1.2,
    HTTP          ==4000.3.16,
    wai           ==3.2.3,
    text          ==1.2.5.0,
    bytestring    ==0.10.12.1,
    utf8-string   ==1.0.2,
    http-types    ==0.12.3,
    blaze-builder ==0.4.2.2,
    HDBC          ==2.4.0.4
  Exposed-Modules:
    Wilde.Application.ApplicationConfiguration
    Wilde.Application.ApplicationServices
    Wilde.Application.ApplicationInput
    Wilde.Application.ObjectModelServiceLink
    Wilde.Application.ObjectTypeService
    Wilde.Application.StandardServices
    Wilde.Application.StandardServiceLinks
    Wilde.Application.Service.PopUp
    Wilde.Application.Service.Result
    Wilde.Application.Service.Service
    
    Wilde.ApplicationConstruction.AttributeTypeConfiguration.UiIoAndDbIo
    Wilde.ApplicationConstruction.AttributeTypeConfiguration.UiIoAndDbIo.UserInteraction
    Wilde.ApplicationConstruction.AttributeTypeConfiguration.DdlAtAnnotation
    Wilde.ApplicationConstruction.GenericStringRepIo
    Wilde.ApplicationConstruction.Presentation.Presentation
    Wilde.ApplicationConstruction.Database.DatabaseUtils
    Wilde.ApplicationConstruction.Database.AttributeTypeDatabaseInfo
    Wilde.ApplicationConstruction.Database.DatabaseColumnTypes
    Wilde.ApplicationConstruction.ObjectModel.AttributeType
    Wilde.ApplicationConstruction.ObjectModel.ObjectType
    Wilde.ApplicationConstruction.ObjectModel.StandardPrimaryKey
    Wilde.ApplicationConstruction.ObjectModel.ReferenceAttributeType
    Wilde.ApplicationConstruction.ObjectModel.IdNameObjectType
    Wilde.ApplicationConstruction.ObjectTypeConfiguration.Database
    Wilde.ApplicationConstruction.AttributeTypeConfiguration.UiIoAndDbIo.Configuration
    Wilde.ApplicationConstruction.ObjectTypeConfiguration.ObjectTypeWithAtDdlInformation
    Wilde.ApplicationConstruction.UserInteraction.Io
    Wilde.ApplicationConstruction.UserInteraction.FixAndDefaultResolver.FixAndDefaultCollection
    Wilde.ApplicationConstruction.UserInteraction.Input.EvaluateExpression
    Wilde.ApplicationConstruction.UserInteraction.Input.DateParser
    Wilde.ApplicationConstruction.UserInteraction.Input.UserInteractionInputers
    Wilde.ApplicationConstruction.UserInteraction.Input.WildeSqlInputer
    Wilde.ApplicationConstruction.UserInteraction.Input.SqlExprParser
    Wilde.ApplicationConstruction.UserInteraction.Input.ParsedSqlExpr2WildeSqlExpr
    Wilde.ApplicationConstruction.UserInteraction.Input.SyntaxCheck
    Wilde.ApplicationConstruction.UserInteraction.Output.LabelAndWidget
    Wilde.ApplicationConstruction.UserInteraction.Output.ObjectListSetup
    Wilde.ApplicationConstruction.UserInteraction.Output.ReferringObjectsComponent
    Wilde.ApplicationConstruction.UserInteraction.Output.ObjectDependentComponent
    Wilde.ApplicationConstruction.UserInteraction.Output.AttributeTypesListFooter
    Wilde.ApplicationConstruction.UserInteraction.Output.SpecialComponents
    Wilde.ApplicationConstruction.UserInteraction.Output.StandardFilterExpression
    Wilde.ApplicationConstruction.UserInteraction.Widgets
    Wilde.ApplicationConstruction.Service.ObjectTypeServiceUtils
    Wilde.ApplicationConstruction.Service.ServiceTools
    Wilde.ApplicationConstruction.Service.ServiceUtils
    Wilde.ApplicationConstruction.Service.StepService
    Wilde.ApplicationConstruction.StandardServices.ShowMany
    Wilde.ApplicationConstruction.StandardServices.CreateOneFrom
    Wilde.ApplicationConstruction.StandardServices.DeleteOne
    Wilde.ApplicationConstruction.StandardServices.ShowSelection
    Wilde.ApplicationConstruction.StandardServices.ShowManyUtils
    Wilde.ApplicationConstruction.StandardServices.UpdateOne
    Wilde.ApplicationConstruction.StandardServices.CreateOne
    Wilde.ApplicationConstruction.StandardServices.ShowOne
    Wilde.ApplicationConstruction.StandardServices.CreateOneUtils
    Wilde.ApplicationConstruction.StandardServices.UpdateConfigTools
    Wilde.ApplicationConstruction.StandardServices.Tools
    Wilde.ApplicationConstruction.StandardServices
    Wilde.ApplicationConstruction.StandardServices.SingleObjectServiceCommon
    Wilde.ApplicationConstruction.ElementSetUtils

    Wilde.ApplicationTool.ApplicationModel
    Wilde.ApplicationTool.Main
    Wilde.ApplicationTool.DefaultCommands
    Wilde.ApplicationTool.DbExecution
    Wilde.ApplicationTool.Command
    Wilde.ApplicationTool.Commands.Check
    Wilde.ApplicationTool.Commands.Database
    Wilde.ApplicationTool.Commands.OrderCreateTables
    Wilde.ApplicationTool.Commands.SqlDdl
    Wilde.ApplicationTool.Commands.DatabaseUtils
    Wilde.ApplicationTool.Commands.Utils
    Wilde.ApplicationTool.ErrorHandling
    Wilde.ApplicationTool.FlagsAndOptions
    Wilde.ApplicationTool.FlagLookup.ForMisc
    Wilde.ApplicationTool.FlagLookup.ForObjectType
    Wilde.ApplicationTool.FlagLookup.Utils

    Wilde.Database.SqlJoin
    Wilde.Database.Sql
    Wilde.Database.SqlDdlInfo
    Wilde.Database.SqlMisc
    Wilde.Database.DmlRenderer

    Wilde.WildeUi.WildeComponent
    Wilde.WildeUi.LayoutValues
    Wilde.WildeUi.LayoutComponents
    Wilde.WildeUi.TableUtils
    Wilde.WildeUi.UiPrimitives
    Wilde.WildeUi.StdValueTypes
    Wilde.WildeUi.StdValues

    Wilde.Media.Translations
    Wilde.Media.WildeStyleType
    Wilde.Media.WildeValue
    Wilde.Media.Database
    Wilde.Media.Database.Configuration
    Wilde.Media.Database.Error
    Wilde.Media.Database.Monad
    Wilde.Media.Database.Exec
    Wilde.Media.Database.ExecStr
    Wilde.Media.CustomEnvironment
    Wilde.Media.ElementSet
    Wilde.Media.Presentation
    Wilde.Media.WildeStyle
    Wilde.Media.GenericStringRep
    Wilde.Media.WildeMedia
    Wilde.Media.UserInteraction
    Wilde.Media.UserInteraction.Input
    Wilde.Media.UserInteraction.Output
    Wilde.Media.UserInteraction.Io
    Wilde.Media.Element
    Wilde.Media.MonadWithInputMedia

    Wilde.Render.AbstractTableToHtml
    Wilde.Render.RenderAsHtml
    Wilde.Render.Cgi.ElementSetIo
    Wilde.Render.Cgi.ServerVariables
    Wilde.Render.Cgi.HRef
    Wilde.Render.UserInteractionRendering
    Wilde.Render.ServiceLink
    Wilde.Render.StyleForHtml
    Wilde.GenericUi.Component
    Wilde.GenericUi.Components
    Wilde.GenericUi.Style
    Wilde.GenericUi.AbstractTable
    Wilde.GenericUi.Value
    Wilde.GenericUi.Widget
    Wilde.Database.BackEndDdl
    Wilde.Database.DmlRendering

    Wilde.Driver.Application.Types
    Wilde.Driver.Application.Utils

    Wilde.Driver.Application.Wai.Utils

    Wilde.Driver.Application.Cgi.CgiHtml
    Wilde.Driver.Application.Cgi.ServiceLink
    Wilde.Driver.Application.Cgi.ServiceLookup
    Wilde.Driver.Application.Cgi.Wai
    Wilde.Driver.Application.Cgi.VariableNames
    Wilde.Driver.Application.Cgi.ServiceLinkRenderers

    Wilde.Driver.Application.WaiServer.RequestHandling.Types
    Wilde.Driver.Application.WaiServer.RequestHandling.File.Handler
    Wilde.Driver.Application.WaiServer.RequestHandling.File.PathHandling
    Wilde.Driver.Application.WaiServer.RequestHandling.File.Types
    Wilde.Driver.Application.WaiServer.RequestHandling.Service.Handler
    Wilde.Driver.Application.WaiServer.RequestHandling.Main.RequestTypeResolving
    Wilde.Driver.Application.WaiServer.RequestHandling.Main.Handler
    Wilde.Driver.Application.WaiServer.Application

    Wilde.Driver.Application.Html
    Wilde.Driver.Database.MySQL.Renderer
    Wilde.Driver.Database.MySQL.ApplicationObjectModelTools
    Wilde.Driver.Database.MySQL.DmlExcutor
    Wilde.Driver.Database.RenderDdlUtils
    Wilde.Driver.UserInteraction.StandardServiceLinkRenderer
    Wilde.Driver.UserInteraction.Translation.En
    Wilde.Driver.UserInteraction.Translation.Se

    Wilde.ObjectModel.Presentation
    Wilde.ObjectModel.Presentation.FooterRowsConstructor
    Wilde.ObjectModel.ObjectModelUtils
    Wilde.ObjectModel.GenericStringRep
    Wilde.ObjectModel.ObjectModel
    Wilde.ObjectModel.AttributeTypeListSetup.WithAnnotation
    Wilde.ObjectModel.AttributeTypeListSetup.SansAnnotation
    Wilde.ObjectModel.AttributeTypeListSetup.Common
    Wilde.ObjectModel.Database
    Wilde.ObjectModel.Database.Output
    Wilde.ObjectModel.Database.Utils
    Wilde.ObjectModel.Database.Execution.Delete
    Wilde.ObjectModel.Database.Execution.Insert
    Wilde.ObjectModel.Database.Execution.InsertAndSelect
    Wilde.ObjectModel.Database.Execution.SelectSansPresentationInfo
    Wilde.ObjectModel.Database.Execution.SelectWithPresentationInfo
    Wilde.ObjectModel.Database.Execution.Update
    Wilde.ObjectModel.Database.Execution.Utils
    Wilde.ObjectModel.Database.InputExistingSansPresentationInfo
    Wilde.ObjectModel.Database.Sql.SansPresentationInfo
    Wilde.ObjectModel.Database.Sql.WithPresentationInfo
    Wilde.ObjectModel.Database.JoinUtils
    Wilde.ObjectModel.DatabaseAndPresentation
    Wilde.ObjectModel.UserInteraction
    Wilde.ObjectModel.UserInteraction.Common
    Wilde.ObjectModel.UserInteraction.Input.Common
    Wilde.ObjectModel.UserInteraction.Input.ForCreate
    Wilde.ObjectModel.UserInteraction.Input.ForExisting
    Wilde.ObjectModel.UserInteraction.OutputTypes
    Wilde.ObjectModel.UserInteraction.Output.Common
    Wilde.ObjectModel.UserInteraction.Output.CreateCommon
    Wilde.ObjectModel.UserInteraction.Output.ExistingCommon
    Wilde.ObjectModel.UserInteraction.Output.ForCreate
    Wilde.ObjectModel.UserInteraction.Output.ForCreateFrom
    Wilde.ObjectModel.UserInteraction.Output.ForExisting
    Wilde.ObjectModel.UserInteraction.Output.ForExistingCreateViaUi

    Wilde.Service.Error
    Wilde.Service.Monad
    Wilde.Service.ServiceLink
    Wilde.Service.SingleDbConnectionHandler
    
    Wilde.Utils.ListUtils
    Wilde.Utils.TextHtmlUtils
    Wilde.Utils.Debug
    Wilde.Utils.Empty
    Wilde.Utils.NonEmptyList
    Wilde.Utils.Utils
    Wilde.Utils.ExceptReaderT
    Wilde.Utils.Monad
    Wilde.Utils.AnyValue
    Wilde.Utils.AnyValue2
    Wilde.Utils.Logging.Entry
    Wilde.Utils.Logging.Class
    Wilde.Utils.Logging.Monad
    Wilde.Utils.Logging.SimpleLogger
    Wilde.Utils.Logging.NoLogging
    Wilde.Utils.Text

Test-Suite unit-tests
  Type:              exitcode-stdio-1.0
  Hs-Source-Dirs:    src, testsuite/tests, testsuite/testapp/src
  Main-Is:           test-suit.hs
  Other-Modules:
    TestSuit
    TestResources.TestUtils
    TestResources.UserInteractionOutputMonadUtils
    TestResources.TestData
    TestResources.ReferenceObjectType
    TestResources.Environment
    WildeTest.DdlUtils
    WildeTest.Media.Test
    WildeTest.Media.ElementTest
    WildeTest.Media.ElementSetTest
    WildeTest.Render.Cgi.ElementSetIoTest
    WildeTest.ApplicationTool.ApplicationToolTest
    WildeTest.ApplicationConstruction.StandardServices.WildeSqlInputerTest
    WildeTest.ApplicationConstruction.AttributeTypeTest
    WildeTest.ApplicationConstruction.SqlExprParserTest
    WildeTest.Utils.ListUtilsTest
    WildeTest.Driver.Tests
    WildeTest.Driver.WaiServer.Tests
    WildeTest.Driver.WaiServer.RequestHandlerResolving
    WildeTest.Driver.WaiServer.FilePathHandling.TestResources
    WildeTest.Driver.WaiServer.FilePathHandling.Tests
    WildeTest.Driver.WaiServer.FilePathHandling.PathIsValid
    WildeTest.Driver.WaiServer.FilePathHandling.ResolveMimeType

  Build-Depends:
    wilde         ,
    HUnit,
    base          ,
    containers    ,
    transformers  ,
    mtl           ,
    pretty        ,
    convertible   ,
    parsec        ,
    old-locale    ,
    time          ,
    array         ,
    utf8-string   ,
    html          ,
    cgi           ,
    bytestring    ,
    blaze-builder ,
    HTTP          ,
    HDBC          ,
    -- HDBC-odbc     ,
    HDBC-mariadb  ,
    text

  Default-Language:  Haskell2010
