cabal-version:       2.4
Name:                wilde-testapp
Version:             1.0
Description:         Test app for dvlp of the library
License:             GPL-3.0-only
Author:              Emil Karlén
Maintainer:          emil@fsf.org
Build-Type:          Simple


common common-properties
  ghc-options:       -threaded -fwarn-unused-imports
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
    base,
    array,
    filepath,
    process,
    containers,
    mtl,
    transformers,
    convertible,
    pretty,
    html,
    cgi,
    parsec,
    time, 
    old-locale,
    bytestring,
    utf8-string,
    wai-extra,
    blaze-builder,
    http-types,
    wai,
    HDBC,
    -- HDBC-odbc,
    HDBC-mariadb,
    wilde == 0.6.0
  other-modules:
    AttributeType

    Db.MariaDb
    Db.Connection

    ObjectType.CharacterEncodingExperiment
    ObjectModel
    ApplicationConfiguration
    Services


Executable testapp.cgi
  import:  common-properties
  Main-is: testapp-cgi.hs

Executable testapp-wai-warp
  import:  common-properties
  Main-is: testapp-wai-warp.hs
  Build-Depends:
    warp == 3.3.21

Executable testapp-tool
  import:  common-properties
  Main-is: testapp-tool.hs
